--- a/_includes/canonical.html
+++ b/_includes/canonical.html
@@ -1,4 +1,4 @@
-{% if page.name contains "index" %}
+{% if page.layout contains "home-en" %}
    <link rel="canonical" href="{{ baseurl }}/index.html">
 {% else %}
    <link rel="canonical" href="{{ page.url }}/index.html">
