--- a/_includes/fonts.html
+++ b/_includes/fonts.html
@@ -1,1 +1,1 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
