update twetter card photos

--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -7,25 +7,25 @@
 <meta itemscope itemtype="http://schema.org/TravelAgency" />
 <meta itemprop="name" content="{{ site.name[page.language] }}" />
 <meta itemprop="description" content="J{{ site.description[page.language] }}" />
-<meta itemprop="url" content="{{ site.baseurl }}">
+<meta itemprop="url" content="{{ site.siteurl }}">
 <meta itemprop="telephone" content="{{ site.telephone }}">
 <meta name="email" content="{{ site.email }}">
-<meta itemprop="image" content="{{ site.photos }}" />
+<meta itemprop="image" content="{{ site.siteurl }}{{ site.photos }}" />
 <!-- Open Graph Protocol -->
-<meta property="og:url" content="{{ site.baseurl }}">
+<meta property="og:url" content="{{ site.siteurl }}">
 <meta property="og:type" content="website">
 <meta property="og:title" content="{{ site.name[page.language] }}">
 <meta property="og:description" content="{{ site.description[page.language] }}">
-<meta property="og:image" content="{{ site.photos }}">
+<meta property="og:image" content="{{ site.siteurl }}{{ site.photos }}">
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
-<meta property="og:image:secure_url" content="{{ site.photos }}" />
+<meta property="og:image:secure_url" content="{{ site.siteurl }}{{ site.photos }}" />
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="{{ site.baseurl }}" />
+<meta name="twitter:site" content="{{ site.siteurl }}" />
 <meta name="twitter:creator" content="{{ site.author }}">
 <meta name="twitter:title" content="{{ page.title }} | {{ site.name[page.language] }}">
 <meta name="twitter:description" content="{{ site.description[page.language] }}" />
-<meta name="twitter:image" content="{{ site.photos }}" />
-<meta name="twitter:site" content="{{ site.baseurl }}">
+<meta name="twitter:image" content="{{ site.siteurl }}{{ site.photos }}" />
+<meta name="twitter:site" content="{{ site.siteurl }}">
