--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -3,6 +3,7 @@
 <meta content="IE=Edge" http-equiv="X-UA-Compatible">
 <meta property="og:description" content="{{ site.description[page.language] }}">
 <meta name="description" content="{{ site.description[page.language] }}">
+<meta name="google-site-verification" content="0vrmfF0PUl6ZYskcSmi7cSDUdxs4jS5PswNISqe7k6Y" />
 <!-- SCHEMA -->
 <script type="application/ld+json">
 {
