--- a/_includes/canonical.html
+++ b/_includes/canonical.html
@@ -1,5 +1,5 @@
 {% if page.layout contains "home-en" %}
-   <link rel="canonical" href="{{ baseurl }}/index.html">
+   <link rel="canonical" href="https://javavisites.com/index.html">
 {% else %}
    <link rel="canonical" href="{{ page.url }}/index.html">
 {% endif %}
