--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
         src="/static/img/phones-symbol.svg">
         </amp-img>
       </a>
-      <a href="https://www.facebook.com/{{ site.facebook }}">
+      <!-- <a href="https://www.facebook.com/{{ site.facebook }}">
         <amp-img
         noloading
         height=30
@@ -36,8 +36,8 @@
         layout=fixed
         src="/static/img/facebook-icon.svg">
         </amp-img>
-      </a>
-      <a href="https://www.instagram.com/{{ site.instagram }}">
+      </a> -->
+      <!-- <a href="https://www.instagram.com/{{ site.instagram }}">
         <amp-img
         noloading
         height=30
@@ -45,7 +45,7 @@
         layout=fixed
         src="/static/img/instagram-logo.png">
         </amp-img>
-      </a>
+      </a> -->
       <a href="https://klikada.com">
         <amp-img
         noloading
@@ -54,7 +54,7 @@
         layout=fixed
         src="/static/img/klikadadotcom.svg">
         </amp-img>
-      </a>    
+      </a>
     </div>
   </div>
 </footer>
